# onchain3r

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
frontend/: index.html
onchain3r/: __init__.py  api.py  cli.py
onchain3r/analyzer/: llm.py
onchain3r/collectors/: base.py  dex.py  onchain.py  social.py  web.py
onchain3r/core/: engine.py  models.py
onchain3r/reporter/: generator.py
